fix: retrieve GPX